# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  gen.bat  imgui.ini
Cmake/: CMakeLists.txt
Doc/UE/: ApplicationCore.pu  Editor.pu  Engine.pu  Platform.pu  Plugins.pu  RHI.pu  RHI.puml  RenderCore.pu  Renderer.pu  Slate.pu  Slate.puml  SlateCore.pu  SlateRHIRenderer.pu  UE4.pu  UMG.pu  ad_UMG.pu  ad_actor.pu  ad_input.pu  ad_processKeyStateMap.pu  ad_renderThread.pu  ad_rt.pu  ad_spawnActor.pu  ad_tick.pu  ad_ue4.pu  ad_worldInit.pu  ad_worldRender.pu
Doc/renderer/: ApplicationCore.pu  Engine.pu  Slate.pu
Shaders/Pixel/: Unlit_PS.hlsl
Source/: CMakeLists.txt
Source/Editor/Private/: Editor.cpp
Source/Editor/Public/: Editor.h
Source/Runtime/ApplicationCore/Private/GenericPlatform/: GameFramework.cpp  GameFrameworkPCH.cpp  GenericApplication.cpp  GenericPlatformApplicationMisc.cpp  GenericWindow.cpp  IDGenerator.cpp
Source/Runtime/ApplicationCore/Private/Windows/: GameFramework.cpp  GameFrameworkPCH.cpp  PlatformHelper.cpp  Window.cpp  WindowsApplication.cpp  WindowsPlatformApplicationMisc.cpp  WindowsWindow.cpp
Source/Runtime/ApplicationCore/Public/: PlatformHelper.h
Source/Runtime/ApplicationCore/Public/GenericPlatform/: Events.h  GameFramework.h  GameFrameworkPCH.h  GenericApplication.h  GenericApplicationMessageHandler.h  GenericPlatformApplicationMisc.h  GenericWindow.h  GenericWindowDefinition.h  IDGenerator.h  PlatformApplicationMisc.h
Source/Runtime/ApplicationCore/Public/Windows/: GameFramework.h  PlatformHelper.h  Window.h  WindowsApplication.h  WindowsWindow.h
Source/Runtime/Core/Private/Misc/: App.cpp  HighResolutionTimer.cpp
Source/Runtime/Core/Public/Misc/: App.h  CoreMiscDefines.h  Helpers.h  HighResolutionTimer.h  MathHelper.h  Optional.h
Source/Runtime/Core/Public/Templates/: Delegate.hpp  Event.h  TypeCompatibleBytes.h  TypeHelper.h
Source/Runtime/D3D12RHI/Private/: ByteAddressBuffer.cpp  CommandList.cpp  CommandQueue.cpp  D3D12Resource.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  Device.cpp  GUI.cpp  GenerateMipsPSO.cpp  IndexBuffer.cpp  RenderCore.cpp  RenderTarget.cpp  ResourceStateTracker.cpp  RootSignature.cpp  Scene.cpp  ShaderResourceView.cpp  Texture.cpp  UnorderedAccessView.cpp  UploadBuffer.cpp  VertexTypes.cpp
Source/Runtime/D3D12RHI/Public/: Adapter.h  Buffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  D3D12Resource.h  DX12LibPCH.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  Device.h  GUI.h  Helpers.h  RenderCore.h  RenderTarget.h  StructuredBuffer.h  Texture.h  ThreadSafeQueue.h
Source/Runtime/Engine/Private/: Camera.cpp  GameInstance.cpp  GameViewportClient.cpp  LocalPlayer.cpp  SceneVisitor.cpp  World.cpp  WorldScene.cpp
Source/Runtime/Engine/Private/Component/: ActorComponent.cpp  ChildActorComponent.cpp  DataComponent.cpp  PrimitiveComponent.cpp  ProcedureMeshComponent.cpp  SceneComponent.cpp  StaticMeshComponent.cpp
Source/Runtime/Engine/Private/GameFramework/: Actor.cpp  ResourceManager.cpp
Source/Runtime/Engine/Public/: Camera.h  GameInstance.h  GameViewportClient.h  Light.h  LocalPlayer.h  PlayerID.h  SceneVisitor.h  World.h  WorldScene.h
Source/Runtime/Engine/Public/Component/: ActorComponent.h  ChildActorComponent.h  DataComponent.h  PrimitiveComponent.h  ProcedureMeshComponent.h  SceneComponent.h  StaticMeshComponent.h
Source/Runtime/Engine/Public/GameFramework/: Actor.h  ResourceManager.h
Source/Runtime/InputCore/Private/: DeviceInputManager.cpp
Source/Runtime/InputCore/Private/Windows/: WindowsDeviceInputManager.cpp
Source/Runtime/InputCore/Public/: DeviceID.h  DeviceInputManager.h  KeyCodes.h
Source/Runtime/InputCore/Public/Windows/: WindowsDeviceInputManager.h
Source/Runtime/Launch/Private/: LaunchEngineLoop.cpp
Source/Runtime/Launch/Private/Windows/: GameFramework.cpp  HighResolutionTimer.cpp  ReadDirectoryChanges.cpp  ReadDirectoryChangesPrivate.cpp  Window.cpp  main.cpp
Source/Runtime/Launch/Public/: Events.h  LaunchEngineLoop.h
Source/Runtime/Launch/Public/Windows/: Events.h  GameFrameworkPCH.h  KeyCodes.h  ReadDirectoryChanges.h  ReadDirectoryChangesPrivate.h
Source/Runtime/Launch/Resources/Windows/: GameFramework.rc
Source/Runtime/Renderer/Public/: SlateRHIRenderer.h
Source/Runtime/Slate/Private/: Adapter.cpp  Buffer.cpp  ConstantBuffer.cpp  ConstantBufferView.cpp  D3D12Resource.cpp  DescriptorAllocatorPage.cpp  Device.cpp  DynamicDescriptorHeap.cpp  Material.cpp  Mesh.cpp  PanoToCubemapPSO.cpp  PipelineStateObject.cpp  SCompoundWidget.cpp  SImguiContent.cpp  SViewport.cpp  SWindow.cpp  SceneNode.cpp  SlateManager.cpp  StructuredBuffer.cpp  SwapChain.cpp  VertexBuffer.cpp
Source/Runtime/Slate/Public/: ByteAddressBuffer.h  CommandList.h  ConstantBufferView.h  DX12LibPCH.h  DescriptorAllocation.h  DynamicDescriptorHeap.h  GUI.h  GenerateMipsPSO.h  IndexBuffer.h  Material.h  Mesh.h  PanoToCubemapPSO.h  PipelineStateObject.h  ResourceStateTracker.h  RootSignature.h  SCompoundWidget.h  SImguiContent.h  SViewport.h  SWidget.h  SWindow.h  Scene.h  SceneNode.h  ShaderResourceView.h  SlateManager.h  SwapChain.h  UnorderedAccessView.h  UploadBuffer.h  VertexBuffer.h  VertexTypes.h  Visitor.h
Source/imgui/: CMakeLists.txt
